# ai-broker

./: .env.example  .gitignore  Launch.ps1  README.md  START.vbs  SYSTEMATIC_QA_PLAN.md  _test_he.py  backtest_verify.py  pyproject.toml  run_web.bat
.cursor/: README.md
.cursor/plans/: מערכת_מסחר_אוטונומית_9d50099a.plan.md
aibroker/: cli.py
aibroker/agent/: alerts.py  approval.py  brain.py  collector.py  fast_strategy.py  guardian.py  intent_normalizer.py  loop.py  meta_policy.py  mini_allocator.py  persistence.py  prompts.py  risk_profiles.py
aibroker/brokers/: __init__.py  alpaca.py  base.py  factory.py  ibkr.py
aibroker/config/: __init__.py  loader.py  (+1 more)
scripts/: cursor-chat-rtl.css  cursor-chat-rtl.user.js
tests/: test_a1_historical.py  test_a2_storage.py  test_a4_schema.py  test_alpaca_adapter.py  test_alpha_vantage.py  test_approval.py  test_b1_brokers_base.py  test_c1_risk_gate.py  test_c2_risk_profiles.py  test_config.py  test_d1_rss_fetcher.py  test_d2_sentiment.py  test_demo_charts.py  test_e2_chat_prompts.py  test_e3_brain.py  test_e5_collector.py  test_f1_loop.py  test_f2_fast_strategy.py  test_f3_guardian_alerts.py  test_g1_backtest_engine.py  test_g_planb_config.py  test_grok_client.py  test_h2_paper_autopilot.py  test_i1_simple_rules.py  test_i_strategies.py  test_intent_normalizer.py  test_j1_runtime.py  test_k1_web_server.py  test_k_web_utils.py  test_m1_integration.py  test_meta_policy.py  test_mini_allocator.py  test_paper_api_aliases.py  test_paper_autopilot.py  test_planb.py  test_port_util.py  test_risk.py  test_trade_demo_session.py
(+57 files in other folders)
